# hades

./: .gitignore  404.html  README.md  default.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  shell.nix  sitemap.xml
.github/: dependabot.yml
.github/workflows/: python-app.yml
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/CLI-ref/: index.html
0.1.2/reference/SUMMARY/: index.html
0.1.2/reference/hades/: index.html
0.1.2/reference/hades/devices/: index.html
0.1.2/reference/hades/main/: index.html
0.1.2/reference/hades/parser/: index.html
0.1.2/reference/hades/simulator/: index.html
0.1.2/reference/hades/techno/: index.html
0.1.3/: 404.html  gen_ref_pages.py  index.html  sitemap.xml
0.1.3/CLI-ref/: index.html
0.1.3/reference/SUMMARY/: index.html
0.1.3/reference/hades/: index.html
0.1.3/reference/hades/devices/: index.html
0.1.3/reference/hades/main/: index.html
0.1.3/reference/hades/parser/: index.html
0.1.3/reference/hades/simulator/: index.html
0.1.3/reference/hades/techno/: index.html
CLI-ref/: index.html
docs/: CLI-ref.md  README.md  gen_ref_pages.py
hades/: __init__.py  main.py  techno.py  techno.yml
hades/calibrators/: __init__.py  general.py
hades/device/: __init__.py  inductor.py  micro_strip.py  mos.py
hades/devices/: __init__.py  device.py  devices.py  generator.py  inductor.py  inductor_g.py  micro_strip.py  mos.py
hades/devices/app_models/: filter.py  matching.py  tools.py
hades/devices/p_layouts/: __init__.py  inductor.py  microstrip.py  tools.py
hades/equation/: inductor.py  matching.py  micro_strip.py
hades/extractors/: __init__.py  magic_extract.tcl  spicing.py  tools.py
hades/layouts/: active.py  general.py  inductor.py  microstrip.py  tools.py
hades/models/: __init__.py  filter.py  inductor.py  matching.py  tools.py
hades/parser/: map.py  netlist.py  tlef.py
hades/parsers/: layermap.lark  layermap.py  map.py  netlist.py  process.lark  process.py  raw.py  spice.py  tlef.lark  tlef.py  tools.py
hades/parsers/ebnf/: spice.lark
hades/simulator/: em.py  simulator.py  simulator.yml
hades/simulators/: __init__.py  em.py  ngspice.py  simulator.py  spice.py
hades/steps/: step.py
hades/wrappers/: elmer_w.py  em.py  gmsh_w.py  meeper.py  ngsolve_w.py  ngspice.py  nix.py  oems.py  openems.py  simulator.py  tools.py
manifests/: nix.conf
nix/: post_inst.sh  sources.json
pdk/asap7/: asap7_fake.proc
pdk/mock/: mock.map  mock.proc  mock.tlef
reference/SUMMARY/: index.html
reference/hades/: index.html
reference/hades/calibrators/: index.html
reference/hades/calibrators/general/: index.html
reference/hades/device/: index.html
reference/hades/device/device/: index.html
reference/hades/device/inductor/: index.html
reference/hades/device/micro_strip/: index.html
reference/hades/device/mos/: index.html
reference/hades/devices/: index.html
reference/hades/devices/accu_models/: index.html
reference/hades/devices/app_models/: index.html
reference/hades/devices/calibrators/: index.html
reference/hades/devices/device/: index.html
reference/hades/devices/device_v2/: index.html
reference/hades/devices/devices/: index.html
reference/hades/devices/inductor/: index.html
reference/hades/devices/micro_strip/: index.html
reference/hades/devices/mos/: index.html
reference/hades/devices/p_layouts/: index.html
reference/hades/equation/: index.html
reference/hades/equation/inductor/: index.html
reference/hades/equation/matching/: index.html
reference/hades/equation/micro_strip/: index.html
reference/hades/extractors/: index.html
reference/hades/extractors/spicing/: index.html
reference/hades/layouts/: index.html
reference/hades/main/: index.html
reference/hades/models/: index.html
reference/hades/parser/: index.html
reference/hades/parsers/: index.html
reference/hades/simulator/: index.html
reference/hades/simulators/: index.html
reference/hades/techno/: index.html
reference/hades/wrappers/: index.html
search/: search_index.json
tests/: test_equation.py  test_techno.py
tests/lib_test/: inductor.hs  mos.hs
tests/tech_test/: foundry.proc  mock.yml
tests/test_devices/test_app_models/: test_app_inductor.py  test_app_tools.py  test_equation.py  test_filter.py  test_matching.py  test_micro_strip.py
tests/test_devices/test_p_layout/: cpl_ref.gds  ind_ref.gds  lange_ref.gds  ms_ref.gds  test_inductor.py  test_microstrip.py  test_tools.py
tests/test_extractors/: ref_ind.spice  ref_sky130_fd.cir  ref_sky130_fd_wrong.cir  sky130_fd_sc_hd.gds  test_ext_tools.py  test_spicing.py
tests/test_generate/: design ind gf.yml  design ms sky.yml  test_generate.py
tests/test_layouts/: cpl_ref.gds  ref_cpl.gds  ref_ground_plane.gds  ref_ind.gds  ref_ind2.gds  ref_lange.gds  ref_line.gds  ref_marchand.gds  ref_mos.gds  ref_ms.gds  ref_via.gds  ref_via_stack.gds  test_general.py  test_inductor.py  test_lay_tools.py  test_microstrip.py  test_mos.py  test_tools.py
tests/test_models/: test_app_inductor.py  test_app_tools.py  test_filter.py  test_matching.py  test_micro_strip.py
tests/test_parser/: test_map.py  test_netlist.py  test_process.py  test_raw.py  test_spice.py  test_tlef.py
tests/test_parser/test_data/: inv.cir  inv.raw  schem_test.out
tests/test_simulator/: schem_test.net  test_em.py  test_npspice.py
tests/test_wrappers/: ref_mesh.stl  schem_test.net  test_em.py  test_meep.py  test_ngsolve.py  test_ngspice.py  test_npspice.py  test_oems.py  test_openems.py  test_tools.py
tests/workdir_test/: amp.hs  conf.yml  design.yml  mos_g.gds
workdir/: generate.py
workdir/inductor/: SG13_L2n0_mesh1um_v2.py
(+92 files in other folders)
