[tool.poetry]
name = "hades"
version = "0.3.0"
description = ""
authors = ["Patarimi <38954040+Patarimi@users.noreply.github.com>"]
readme = "docs/README.md"

[tool.poetry.scripts]
hades = "hades.main:app"

[tool.poe.tasks]
update_show = "poetry show -T -o --with=dev,doc"
update_all = "poetry update --with=doc,dev"
test = 'pytest --basetemp=tmp'
install_all = "poetry install --with=dev,doc"
publish = "poetry publish --build --username __token__ --password $PYPI_TOKEN"
doc = "mkdocs gh-deploy"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli_level = "DEBUG"
log_file_level = "INFO"
log_file = "./pytest.log"


[tool.poetry.dependencies]
python = "^3.10,<3.13"
gdstk = "^0.9.48"
pyyaml = "^6.0"
scipy = "^1.12.0"
python-dotenv = "^1.0.0"
volare = "^0.17.0"
rich = "^13.0"
scikit-rf = "^1.0.0"
pydantic = "^2.6.0"
matplotlib = "^3.8.2"
lark = "^1.1.9"
typer = "^0.12.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.0"
pytest = "^8.2.1"
pytest-sugar = "^1.0.0"
setuptools = "^69.0.0"
ruff = "^0.4.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.5.13"
mkdocs-typer = "^0.0.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocstrings = "^0.25.0"
mkdocstrings-python = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
