[project]
name = "hades"
version = "0.4.1"
description = "A package for parametric layout design."
authors = [{name = "Patarimi", email="<38954040+Patarimi@users.noreply.github.com>"}]
readme = "docs/README.md"

[tool.poetry.scripts]
hades = "hades.main:app"

[tool.poe.tasks]
update_show = "poetry show -T -o --with=dev,doc"
update_all = "poetry update --with=doc,dev"
test = 'pytest --basetemp=tmp'
install_all = "poetry install --with=dev,doc"
publish = "poetry publish --build --username __token__ --password $PYPI_TOKEN"
doc = "mkdocs gh-deploy"
run = "wsl -d NixOS nix-shell --run"
smoke_test = ["run magic"]

[tool.poe.tasks.precommit]
sequence = [
    {ref = "update_show"},
    {cmd = "ruff format"},
    {cmd = "ruff check"},
    {ref = "test"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli_level = "ERROR"
log_file_level = "INFO"
log_file = "./pytest.log"


[tool.poetry.dependencies]
python = "^3.11,<3.14"
pyyaml = "^6.0"
scipy = "^1.12.0"
python-dotenv = "^1.0.0"
volare = "^0.20.6"
rich = "^13.0"
scikit-rf = "^1.0.0"
matplotlib = "^3.8.2"
lark = "^1.1.9"
numpy = "^2.0.0"
klayout = "^0.30.2"
ngsolve = "^6.2.2503"
pydantic = "^2.8.2"
cyclopts = "^3.16.0"
pandas = "^2.2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.34.0"
pytest = "^8.1.1"
pytest-sugar = "^1.0.0"
setuptools = "^80.3.1"
ruff = "^0.11.13"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.5.13"
mkdocs-typer = "^0.0.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
